--- a/source/_posts/系统逻辑梳理.md
+++ b/source/_posts/系统逻辑梳理.md
@@ -2,8 +2,8 @@
 title: 一个简约扁平化的Hexo静态主题博客-Quiet
 comments: false
 categories: 项目案例
-aubot: Cange-Q
-aubot_link: 'https://github.com/79E/hexo-theme-quiet'
+aubot: xuan
+aubot_link: 'https://github.com/leixuan2138085/leixuan2138085.github.io'
 tags:
 - Hexo
 - Quiet
